--- a/src/styleSheet/Issue.css
+++ b/src/styleSheet/Issue.css
@@ -146,6 +146,7 @@ input[type="number"]:focus {
   margin-top: 25px;
   flex-wrap: wrap;
   gap: 6px;
+  margin-bottom: 10px;
 }
 
 .pagination button {
